# Palora

./: .gitignore  README.md  package-lock.json  package.json  project_spec.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py  services.py  settings.py
backend/app/actions/: base.py  browser_managed.py  calendar_event.py  mail_draft.py  reminders.py
backend/app/api/: deps.py  routes_actions.py  routes_chat.py  routes_ingest.py  routes_memory.py
backend/app/model/: base.py  embeddings.py  gemma_provider.py
backend/app/orchestrator/: engine.py  intents.py  prompt_builder.py  schemas.py
backend/app/policy/: engine.py
backend/app/writeback/: service.py
backend/tests/: test_app.py
desktop/: index.html  main.js  preload.js  renderer.js  styles.css
prototypes/: palora_chat_first_preview.html
